fix: homecover overflow on responsive and minor changes on editAkun
- Added scss properties on home pintu scss
- Fix responsive on home cover
- minor changes on editAkun

--- a/src/views/home/HomeCover/HomeCover.scss
+++ b/src/views/home/HomeCover/HomeCover.scss
@@ -1,37 +1,54 @@
-.home-cvr-container {
-  width: 100%;
-  // height: 100%;
-  // min-height: calc(100vh - 6rem);
-  align-items: center;
-  & > .home-cvr-inner_container {
-    width: 100%;
-    min-height: 100%;
-    border-radius: 50px;
+// .home-cvr-container {
+//   width: 100%;
+//   // height: 100%;
+//   // min-height: calc(100vh - 6rem);
+//   align-items: center;
+//   & > .home-cvr-inner_container {
+//     width: 100%;
+//     min-height: 100%;
+//     border-radius: 50px;
 
-    & > .home-cvr-middle_container {
-      width: max-content;
-      height: 100%;
-      margin: 0 auto;
-      // padding: 3rem;
-
-      align-items: center;
-    }
+//     & >
+//   }
+// }
+@media screen and (min-width: 820px) {
+  .home-cvr-outer_container {
+    height: 100vh;
   }
 }
 
+.home-cvr-middle_container {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  // padding: 3rem;
+
+  align-items: center;
+  // justify-content: center;
+}
 .home-cvr-header {
-  width: 80ch;
+  display: flex;
+  // width: 80ch;
   margin: 2rem 0 1rem 0;
   & h1 {
-    font-size: 2.5rem;
+    font-size: 1.7rem;
     font-family: Rubik, Arial, sans-serif;
     font-weight: 700;
     text-align: center;
   }
 }
 
+@media screen and (max-width: 942px) {
+  .home-cvr-header {
+    & h1 {
+      font-size: 1.5rem;
+      width: 80vw;
+    }
+  }
+}
+
 .home-cvr-btn button {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: Poppins, Arial, sans-serif;
   font-weight: 700;
 
@@ -39,26 +56,28 @@
   border-radius: 20px;
 }
 
-.home-cvr-btn {
-  margin-bottom: 3rem;
-}
-
 .home-cvr-gate {
   & img {
-    width: 400px;
+    width: 300px;
   }
 
   margin-top: 2.5rem;
 }
 
 .home-cvr-mxm-logo {
-  margin-top: 3rem;
+  margin-top: 2rem;
   & img {
     height: 125px;
   }
 }
 
 @media screen and(max-width: 820px) {
+  .home-cvr-mxm-logo {
+    margin-top: 1rem;
+    & img {
+      height: 100px;
+    }
+  }
   .home-cvr-gate {
     margin-top: 4rem;
     & img {
@@ -68,7 +87,8 @@
 
   .home-cvr-header {
     & h1 {
-      font-size: 2rem;
+      font-size: 1.5rem;
+      width: 80vw;
     }
   }
 
@@ -79,11 +99,46 @@
   }
 }
 
+@media screen and(max-width: 620px) {
+  .home-cvr-mxm-logo {
+    margin-top: 2rem;
+    & img {
+      height: 100px;
+    }
+  }
+  .home-cvr-gate {
+    margin-top: 4rem;
+    & img {
+      width: 200px;
+    }
+  }
+
+  .home-cvr-header {
+    justify-content: center;
+    & h1 {
+      font-size: 1.5rem;
+      width: 80vw;
+    }
+  }
+
+  .home-cvr-btn {
+    & button {
+      font-size: 1rem;
+    }
+  }
+}
+
 @media screen and(max-width: 420px) {
+  .home-cvr-mxm-logo {
+    margin-top: 2rem;
+    & img {
+      height: 85px;
+    }
+  }
   .home-cvr-gate {
     margin-top: 5rem;
     & img {
-      width: 225px;
+      width: 200px;
     }
   }
 
@@ -95,7 +150,7 @@
 
   .home-cvr-btn {
     & button {
-      font-size: 1.5rem;
+      font-size: 0.8rem;
     }
   }
 }
