--- a/src/views/home/HomePintu/HomePintu.scss
+++ b/src/views/home/HomePintu/HomePintu.scss
@@ -23,15 +23,20 @@
   width: 14.6%;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
+  -moz-transform: scaleX(-1);
 
   transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
   transform-origin: right center;
+  -moz-transform-origin: right center;
   transition: transform 0.5s, box-shadow 0.5s;
+  -moz-transition: transform 0.5s, box-shadow 0.5s;
   z-index: 2;
 }
 
 .left-gate-open {
   transform: perspective(1200px) rotateY(35deg);
+  -moz-transform: perspective(1200px) rotateY(35deg);
 }
 
 .right-gate {
@@ -45,11 +50,13 @@
   transform-style: preserve-3d;
   transform-origin: left center;
   transition: transform 0.5s, box-shadow 0.5s;
+  -moz-transition: transform 0.5s, box-shadow 0.5s;
   z-index: 2;
 }
 
 .right-gate-open {
   transform: perspective(1200px) rotateY(-35deg);
+  -moz-transform: perspective(1200px) rotateY(-35deg);
 }
 
 @media screen and (max-width: 1024px) {
